--- a/package.json
+++ b/package.json
@@ -54,5 +54,37 @@
     "run-sequence": "^1.0.2",
     "traverse": "^0.6.6",
     "wiredep": "^2.2.2"
-  }
+  },
+  "description": "[![Build Status](https://travis-ci.org/roots/sage.svg)](https://travis-ci.org/roots/sage)\r [![devDependency Status](https://david-dm.org/roots/sage/dev-status.svg)](https://david-dm.org/roots/sage#info=devDependencies)",
+  "main": "gulpfile.js",
+  "dependencies": {
+    "del": "^1.2.0",
+    "gulp": "^3.9.0",
+    "browser-sync": "^2.8.0",
+    "gulp-autoprefixer": "^2.3.1",
+    "asset-builder": "^1.1.0",
+    "gulp-changed": "^1.2.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-flatten": "^0.0.4",
+    "gulp-if": "^1.2.5",
+    "gulp-jshint": "^1.11.2",
+    "gulp-less": "^3.0.3",
+    "gulp-rename": "^1.2.2",
+    "gulp-rev": "^3.0.1",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-sass": "^2.0.4",
+    "imagemin-pngcrush": "^4.1.0",
+    "gulp-plumber": "^1.0.1",
+    "lazypipe": "^0.2.4",
+    "merge-stream": "^0.1.8",
+    "jshint-stylish": "^1.0.2",
+    "minimist": "^1.1.2",
+    "traverse": "^0.6.6",
+    "run-sequence": "^1.1.2",
+    "wiredep": "^2.2.2",
+    "gulp-uglify": "^1.2.0"
+  },
+  "license": "ISC"
 }
